# 3d-photo-inpainting

./: .gitignore  main.py  pyproject.toml
depth/: moon.npy
