[tool.black]
line-length = 120
target-version = ['py37']
[tool.poetry]
name = "3d-photo-inpainting"
version = "0.1.0"
description = ""
authors = ["akonshin <akonshin@ivi.ru>"]

[tool.poetry.dependencies]
python = "^3.7"
torch = "1.4.0"
torchvision = "0.5.0"
vispy = "0.6.4"
moviepy = "1.0.2"
transforms3d = "0.3.1"
networkx = "2.3"
scipy = "^1.6.0"
PyYAML = "^5.4.1"
matplotlib = "^3.3.4"
opencv-python = "^4.5.1"
scikit-image = "^0.18.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
